[package]
name = "repo_tree"
description = "Repo-tree - Local Repository manager"
default-run="rt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
colored = "3.1.1"
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
git2 = { version = "0.20.4", default-features=false }
indoc = "2.0.7"
insta = "1.46.3"
itertools = "0.14.0"
jj-lib = "0.39.0"
pathdiff = "0.2.3"
pollster = "0.4.0"
regex = "1.12.3"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
url = "2.5.8"
which = "8.0.2"
yaml-rust2 = "0.11.0"

[dev-dependencies]
assert_cmd = "2.2.0"
